Fix laggy animations on Firefox and Safari

--- a/assets/scss/components/site-header/_theme.scss
+++ b/assets/scss/components/site-header/_theme.scss
@@ -10,7 +10,6 @@ $site-header-transition-speed: .3s !default;
         @include wp-offset(top, 0, true);
 
         min-height: var(--theme-header-height);
-        margin-top: var(--theme-header-offset);
 
         transition: var(--theme-transition);
         transition-property: opacity;
@@ -59,9 +58,9 @@ $site-header-transition-speed: .3s !default;
     padding-right: var(--theme-header-sides-spacing);
 }
 
-@mixin remove-page-padding-top {
-    #page {
-        padding-top: 0 !important;
+@mixin remove-page-spacing-top {
+    #page .site-content {
+        transform: translateY(0) !important;
     }
 }
 
@@ -89,7 +88,7 @@ $site-header-transition-speed: .3s !default;
 }
 
 .has-hero {
-    @include remove-page-padding-top;
+    @include remove-page-spacing-top;
 
     .novablocks-hero:first-child:after {
         content: '';
