--- a/assets/scss/theme/_frontend.scss
+++ b/assets/scss/theme/_frontend.scss
@@ -31,3 +31,8 @@
 .entry-meta a:hover {
     text-decoration-color: var(--current-color-primary);
 }
+
+.site-content {
+    will-change: transform;
+    backface-visibility: hidden;
+}
